# pdf-password-remover

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: build-test.yml  publish.yml
pdf_password_remover/: __init__.py  main.py
pdf_password_remover/utils/: pdf_utils.py
tests/: test_pdf_utils.py
